<resources>
    <!--    Login-->
    <string name="app_name">Final Project</string>
    <string name="text_login">Login</string>

    <string name="hint_username">Username</string>
    <string name="hint_password">Pass word</string>
    <string name="button_login">Login</string>
    <string name="text_account_yet">Not have account yet? <u>Sign up</u></string>

    <!--    Register-->
    <string name="text_signup">Sign up</string>
    <string name="hint_name">Full name</string>
    <string name="hint_phonenumbers">Phone numbers</string>
    <string name="hint_confirmpass">input password again</string>
    <string name="button_register">Register</string>
    <string name="text_gotologin">Already have an account. <u>Sign in now</u></string>
    <string name="hint_email_eTicket">Email to receive E-ticket</string>
    <string name="hint_other">Other requests or contact information</string>

    <string name="text_search_icon">Search</string>
    <string name="text_ticket_icon">My ticket</string>
    <string name="text_account_icon">My account</string>

    <string name="text_sign_in"> <u>Sign in</u> </string>
    <string name="text_slogan">Guarantee 150% refund if transport service is not provided</string>

    <string name="hint_start_point">Start point</string>
    <string name="hint_end_point">Where to?</string>
    <string name="hint_date">Departure date</string>
    <string name="hint_time">Departure time</string>
    <string name="hint_xe">Vehicle</string>
    <string name="hint_price">Prices</string>

    <string name="text_search_tickets">Search tickets</string>

    <string name="tex_confirm">Confirm</string>

    <string name="text_login_required1"><b>Login required</b></string>
    <string name="text_login_required2">Login in to see your booking history</string>

    <string name="text_no_tickets"><b>You have no tickets yet</b></string>
    <string name="text_require_pull_down">Try pulling down to update the booking list</string>

    <string name="text_come_back"><b>Go to back</b></string>

    //passenger, payment, ticket info title
    <string name="passenger_details"><b>Passenger Details</b></string>
    <string name="text_ticket_information"><b>Ticket information</b></string>
    <string name="payment_method_title"><b>Payment methods</b></string>

    <string name="text_member">Member</string>
    <string name="text_edit"><u>Edit</u></string>
    <string name="text_full_name">Full name:</string>
    <string name="text_gender">Gender:</string>
    <string name="text_email">Email:</string>
    <string name="text_phone">Phone:</string>

    <string name="text_help">Help Center</string>
    <string name="text_feedback">Share feedback</string>
    <string name="text_logout">Log out</string>
    <string name="text_account_info">Account Information</string>

    <string name="text_Male">Male</string>
    <string name="text_Female">Female</string>
    <string name="text_Other">Other</string>
    <string name="text_Save">Save</string>

    <string name="title_admin">Admin</string>
    <string name="text_manage_xe">Manage Car</string>
    <string name="text_manage_diadiem">Manage City</string>
    <string name="text_manage_route">Manage Route</string>
    <string name="text_manage_ticket">Manage Ticket</string>
    <string name="text_report">Statistic</string>

    <string name="hint_idxe">ID Number</string>
    <string name="hint_namexe">Name</string>
    <string name="text_add">Add</string>
    <string name="text_addnew">Add New</string>
    <string name="text_update">Update</string>
    <string name="text_delete">Delete</string>
    <string name="hint_seat">Seat</string>
    <string name="text_payment_stt">Payment Status</string>
    <string name="text_unpaid">Unpaid</string>
    <string name="text_paid">Paid</string>
    <string name="text_ticket_stt">Ticket Status</string>
    <string name="text_upcomming">Upcomming</string>
    <string name="text_complete">Complete</string>
    <string name="text_cancle">Cancel</string>

    <string name="text_Feature_route">Featured route</string>
    <string name="text_featured">Featured</string>
    <string name="text_featureless">Featureless</string>
    <string name="text_choose_month">Choose month</string>
    <string name="text_start_statistic">Start statistic</string>
    <string name="text_total_tickets">Total Tickets:</string>
    <string name="text_cancel_tickets">Cancel Tickets:</string>
    <string name="text_complete_tickets">Complete Tickets:</string>
    <string name="text_revenue">Revenue:</string>
</resources>