<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/maincolor2"
    tools:context=".myaccount.EditInfoActivity">

    <LinearLayout
        android:id="@+id/layoutHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:background="@color/maincolor1">

        <ImageView
            android:layout_width="50dp"
            android:id="@+id/backBefore"
            android:layout_height="wrap_content"
            android:src="@drawable/back_icon"
            android:padding="10dp"
            app:tint="@color/maincolor2" />

        <TextView
            android:id="@+id/textviewRoute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_account_info"
            android:textColor="@color/maincolor2"
            android:textSize="@dimen/text_content_size" />

    </LinearLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circleimageEditUser"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/margin_basex2"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:src="@drawable/account_icon"/>

    <EditText
        android:background="@drawable/edittext_shape"
        android:id="@+id/edittextFullName"
        android:layout_marginLeft="@dimen/margin_base"
        android:layout_marginRight="@dimen/margin_base"
        android:inputType="textPersonName"
        android:theme="@style/edt_view"
        android:hint="@string/hint_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:background="@drawable/edittext_shape"
        android:id="@+id/edittextPhoneNumber"
        android:layout_margin="@dimen/margin_base"
        android:inputType="number"
        android:theme="@style/edt_view"
        android:hint="@string/hint_phonenumbers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_marginLeft="@dimen/margin_base"
        android:theme="@style/edt_view"
        android:text="@string/text_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <RadioGroup
        android:gravity="center_vertical"
        android:id="@+id/radioGender"
        android:layout_marginLeft="@dimen/margin_base"
        android:layout_marginRight="@dimen/margin_base"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:layout_weight="1"
            style="@style/edt_view"
            android:id="@+id/radioButtonMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_Male"/>

        <RadioButton
            android:layout_weight="1"
            style="@style/edt_view"
            android:id="@+id/radioButtonFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_Female"/>

        <RadioButton
            android:layout_weight="1"
            android:id="@+id/radioButtonOther"
            style="@style/edt_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_Other" />

    </RadioGroup>

    <Button
        android:textSize="@dimen/text_content_size"
        android:textColor="@color/maincolor2"
        android:layout_margin="@dimen/margin_base"
        android:text="@string/text_Save"
        android:id="@+id/buttonSave"
        android:background="@drawable/button_shape"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


</LinearLayout>
