<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".admin.managefunction.DIADIEM.AddCityActivity"
    android:orientation="vertical"
    android:background="@drawable/background">

    <LinearLayout
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/layoutHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/backBefore"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:src="@drawable/back_icon"
            android:padding="@dimen/margin_base0.5"
            app:tint="@color/maincolor2" />

        <TextView
            style="@style/edt_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_come_back"
            android:textColor="@color/maincolor2" />

        <TextView
            android:id="@+id/textviewDeleteCity"
            android:layout_marginLeft="@dimen/margin_basex2"
            android:layout_marginRight="@dimen/margin_base0.5"
            android:gravity="end"
            style="@style/edt_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_delete"
            android:textColor="@color/colorText_delete" />

    </LinearLayout>

    <TextView
        android:layout_marginTop="@dimen/margin_basex2"
        android:layout_marginBottom="@dimen/margin_base"
        android:gravity="center"
        android:text="@string/text_manage_diadiem"
        android:theme="@style/text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageCity"
            android:layout_width="150dp"
            android:layout_height="130dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/location_city" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">



                <EditText
                    android:theme="@style/edt_view"
                    android:id="@+id/editNameCity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_base"
                    android:paddingRight="@dimen/margin_base"
                    android:layout_marginTop="@dimen/margin_base"
                    android:layout_marginEnd="@dimen/margin_base"
                    android:paddingLeft="@dimen/margin_base"
                    android:background="@drawable/edittext_shape"
                    android:ems="10"
                    android:hint="@string/hint_namexe"
                    android:inputType="textPersonName"/>

                <Button
                    android:id="@+id/buttonAddCity"
                    android:text="@string/text_add"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_base"
                    android:textSize="@dimen/text_content_size"
                    android:textColor="@color/maincolor2"
                    android:background="@drawable/button_shape"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>