<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary">

  <RelativeLayout
      android:id="@+id/relativeLayout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:id="@+id/linearUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:background="@color/maincolor1"
        android:orientation="horizontal">

      <de.hdodenhof.circleimageview.CircleImageView
          android:id="@+id/circleimageUser"
          android:layout_width="50dp"
          android:layout_height="50dp"
          android:layout_margin="@dimen/margin_base0.5"
          android:src="@drawable/account_icon" />

      <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="match_parent"
          android:gravity="center_vertical"
          android:orientation="vertical">

        <TextView
            android:id="@+id/textviewUserName"
            style="@style/edt_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="demo"
            android:textColor="@color/maincolor2" />

        <TextView
            android:id="@+id/textviewMember"
            style="@style/edt_view"
            android:textSize="15dp"
            android:textStyle="italic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_member"
            android:textColor="@color/maincolor2" />

      </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textviewEdit"
        style="@style/edt_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/linearUserName"
        android:layout_alignBottom="@+id/linearUserName"
        android:layout_alignParentRight="true"
        android:gravity="center_vertical"
        android:paddingRight="@dimen/margin_base"
        android:drawableLeft="@drawable/edit_icon_"
        android:textColor="@color/maincolor2" />

  </RelativeLayout>

  <LinearLayout
      app:layout_constraintTop_toBottomOf="@id/relativeLayout"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      android:id="@+id/linearContainInfoUser"
      android:layout_margin="@dimen/margin_base"
      android:weightSum="2"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal">

    <LinearLayout
        android:layout_width="264dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

      <TextView
          style="@style/edt_view"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:drawableLeft="@drawable/user_icon"
          android:text="@string/text_full_name" />

      <TextView
          style="@style/edt_view"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:drawableLeft="@drawable/gender_icon"
          android:text="@string/text_gender" />

      <TextView
          style="@style/edt_view"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:drawableLeft="@drawable/email_icon"
          android:text="@string/text_email" />

      <TextView
          style="@style/edt_view"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:drawableLeft="@drawable/phone_icon"
          android:text="@string/text_phone" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginLeft="@dimen/margin_base0.5"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

      <TextView
          android:id="@+id/textviewFullName"
          style="@style/edt_view"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="Lương Việt Hoàng"/>

      <TextView
          android:id="@+id/textviewGender"
          style="@style/edt_view"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="Male"/>

      <TextView
          android:id="@+id/textviewEmail"
          style="@style/edt_view"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="demo@gmail.com"/>

      <TextView
          style="@style/edt_view"
          android:id="@+id/textviewPhone"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="1234567890"/>

    </LinearLayout>

  </LinearLayout>


  <LinearLayout
      app:layout_constraintTop_toBottomOf="@+id/linearContainInfoUser"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      android:layout_marginTop="@dimen/margin_base"
      android:layout_marginLeft="@dimen/margin_base"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#989898"/>

    <TextView
        android:id="@+id/textviewHelp"
        android:layout_marginTop="@dimen/margin_base"
        android:layout_marginBottom="@dimen/margin_base"
        style="@style/edt_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/help_icon"
        android:drawableRight="@drawable/chevron_right_icon"
        android:text="@string/text_help"
        android:textSize="@dimen/text_content_size" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#989898"/>

    <TextView
        android:layout_marginTop="@dimen/margin_base"
        android:layout_marginBottom="@dimen/margin_base"
        style="@style/edt_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/star_rate_icon"
        android:drawableRight="@drawable/chevron_right_icon"
        android:text="@string/text_feedback"
        android:textSize="@dimen/text_content_size" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#989898"/>

    <TextView
        android:id="@+id/textviewLogout"
        style="@style/edt_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_base"
        android:layout_marginBottom="@dimen/margin_base"
        android:drawableLeft="@drawable/logout"
        android:drawableRight="@drawable/chevron_right_icon"
        android:text="@string/text_logout"
        android:textColor="#EC0B0B"
        android:textSize="@dimen/text_content_size" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#989898"/>
  </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>