<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".admin.managefunction.DIADIEM.ManageDiaDiemActivity"
    android:orientation="vertical"
    android:background="@drawable/background">

    <LinearLayout
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/layoutHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/backBefore"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:src="@drawable/back_icon"
            android:padding="@dimen/margin_base0.5"
            app:tint="@color/maincolor2" />

        <TextView
            style="@style/edt_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_come_back"
            android:textColor="@color/maincolor2" />

    </LinearLayout>

    <TextView
        android:layout_marginTop="@dimen/margin_base0.5"
        android:layout_marginBottom="@dimen/margin_base"
        android:gravity="center"
        android:text="@string/text_manage_diadiem"
        android:theme="@style/text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/buttonAddNewCity"
            android:textColor="@color/maincolor2"
            android:background="@color/maincolor1"
            android:text="@string/text_addnew"
            android:layout_marginLeft="@dimen/margin_base"
            android:layout_marginRight="@dimen/margin_base"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <ListView
            android:paddingLeft="@dimen/margin_base"
            android:paddingRight="@dimen/margin_base"
            android:layout_marginTop="@dimen/margin_base0.5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/listviewDiaDiem"
            android:clipToPadding="false"
            android:orientation="vertical"
            />

    </LinearLayout>

</LinearLayout>