<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@drawable/background"
    android:theme="@style/AppTheme">

    <LinearLayout
        android:id="@+id/layoutHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:theme="@style/MyActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/backBefore"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:src="@drawable/back_icon"
            app:tint="@color/colorTextIcons" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/textviewRoute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Ho Chi Minh - Ca Mau"
                android:textColor="@color/maincolor2"
                android:textSize="@dimen/text_content_size" />

            <TextView
                android:id="@+id/textviewDepartureDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="CN, 30/4/1975"
                android:textColor="@color/maincolor2"
                android:textSize="@dimen/text_note_size" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearMyTicket"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="125dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutHeader">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/imageTicket"
            android:layout_width="@dimen/width_img_ticket"
            android:layout_height="@dimen/height_img_ticket"
            android:padding="8dp"
            android:src="@drawable/limousine21v1"
            app:riv_corner_radius="@dimen/basic_radius" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/margin_base0.5"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nameTicket"
                style="@style/bus_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Giường nằm 40 chỗ (WC)" />

            <TextView
                android:theme="@style/ticket_inf"
                android:paddingLeft="@dimen/margin_base0.5"
                android:id="@+id/busNumber"
                android:text="61C2-18182"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"/>

            <TextView
                android:id="@+id/departureTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:fontFamily="@font/calibri"
                android:text="9:00 - 11:30"
                android:textAlignment="textEnd" />

            <TextView
                android:id="@+id/priceTicket"
                style="@style/bus_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:fontFamily="@font/calibri"
                android:text="250.000 VND"
                android:textAlignment="textEnd"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearMyTicket">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_base"
            android:layout_marginLeft="@dimen/margin_base"
            android:layout_marginTop="@dimen/margin_base"
            android:layout_marginEnd="@dimen/margin_base"
            android:layout_marginRight="@dimen/margin_base"
            android:text="@string/passenger_details"
            android:textColor="@android:color/black"
            android:theme="@style/edt_view" />

        <EditText
            android:fontFamily="@font/calibri"
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_base"
            android:layout_marginLeft="@dimen/margin_base"
            android:layout_marginTop="@dimen/margin_base"
            android:layout_marginEnd="@dimen/margin_base"
            android:layout_marginRight="@dimen/margin_base"
            android:drawableLeft="@drawable/user_icon"
            android:hint="@string/hint_name"
            android:inputType="textPersonName"
            android:theme="@style/edt_view" />

        <EditText
            android:fontFamily="@font/calibri"
            android:id="@+id/editTextPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_base"
            android:layout_marginLeft="@dimen/margin_base"
            android:layout_marginTop="@dimen/margin_base"
            android:layout_marginEnd="@dimen/margin_base"
            android:layout_marginRight="@dimen/margin_base"
            android:drawableLeft="@drawable/phone_contact_icon"
            android:ems="10"
            android:hint="@string/hint_phonenumbers"
            android:inputType="phone"
            android:theme="@style/edt_view" />

        <EditText
            android:fontFamily="@font/calibri"
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_base"
            android:layout_marginLeft="@dimen/margin_base"
            android:layout_marginTop="@dimen/margin_base"
            android:layout_marginEnd="@dimen/margin_base"
            android:layout_marginRight="@dimen/margin_base"
            android:drawableLeft="@drawable/email_icon"
            android:hint="@string/hint_email_eTicket"
            android:inputType="textEmailAddress"
            android:theme="@style/edt_view" />

        <EditText
            android:fontFamily="@font/calibri"
            android:id="@+id/editTextOtherRequest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_base"
            android:layout_marginLeft="@dimen/margin_base"
            android:layout_marginTop="@dimen/margin_base"
            android:layout_marginEnd="@dimen/margin_base"
            android:layout_marginRight="@dimen/margin_base"
            android:drawableLeft="@drawable/question_answer_icon"
            android:hint="@string/hint_other"
            android:inputType="textMultiLine"
            android:maxLines="5"
            android:minLines="1"

            android:theme="@style/edt_view" />
    </LinearLayout>

    <RelativeLayout
        android:background="@drawable/shadow_button"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/seatChoose"
            android:theme="@style/ticket_inf"
            android:textAlignment="center"
            android:layout_marginBottom="@dimen/margin_base0.5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonNextPayment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_basex2"
                android:background="@drawable/button_shape"
                android:layout_marginLeft="@dimen/margin_base0.5"
                android:layout_marginRight="@dimen/margin_base0.5"
                android:text="Continue"
                android:layout_gravity="center"
                android:textColor="@color/maincolor2"
                android:textSize="@dimen/text_content_size" />
        </LinearLayout>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
